[package]
name = "s57-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4"
num-traits = "0.2"
rusqlite = { version = "0.32", features = ["bundled"] }
s57-parse = { path = "../s57-parse" }
s57-interp = { path = "../s57-interp" }
s57-catalogue = { path = "../s57-catalogue" }
