[package]
name = "s57-interp"
version = "0.1.0"
edition = "2021"

[dependencies]
# Parser crate for ISO 8211 / S-57
s57-parse = { path = "../s57-parse" }

# Exact math for coordinates and depths
num-bigint = "0.4"
num-rational = "0.4"
num-traits = "0.2"

# ECS entity management
slotmap = "1.0"

# Serde for diagnostics and caching
serde = { version = "1.0", features = ["derive"], optional = true }
